Fixing centered text on Safari

--- a/Portfolio/Pages/ContactInfo/ContactInfo.css
+++ b/Portfolio/Pages/ContactInfo/ContactInfo.css
@@ -56,6 +56,6 @@ nav ul li a:hover {
 
 div.footer{
   padding: 5px;
-  text-align-last: center;
+  text-align: center;
 }
 /*End footer*/
