--- a/Portfolio/Pages/Internship/Internship.css
+++ b/Portfolio/Pages/Internship/Internship.css
@@ -56,12 +56,13 @@ nav ul li a:hover {
 .sideimg{
   border-radius: 3px;
   border-width: 5px;
+  image-rendering: auto;
 }
 
 /*Footer of the page*/
 
 div.footer{
   padding: 5px;
-  text-align-last: center;
+  text-align: center;
 }
 /*End footer*/
