--- a/Portfolio/Pages/ProgrammingProjects/ProgrammingProjects.css
+++ b/Portfolio/Pages/ProgrammingProjects/ProgrammingProjects.css
@@ -63,6 +63,6 @@ nav ul li a:hover {
 
 div.footer{
   padding: 10px;
-  text-align-last: center;
+  text-align: center;
 }
 /*End footer*/
